[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "faucet"
version = "0.1.0"
description = ""
authors = ["ApeWorX <admin@apeworx.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.109.1"
uvicorn = "^0.20.0"
eth-ape = "^0.6.7"
ape-ens = "^0.6.0"
ape-foundry = "^0.6.14"
slowapi = "^0.1.7"

[tool.poetry.scripts]
start = "faucet.app:start"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1"
isort = "^5.12.0"
ipython = "^8.11.0"
pytest = "^7.2.2"
httpx = "^0.23.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
